# HomeManager

./: .gitignore  CMakeLists.txt  README.md
src/: const.h  constdef.c  constdef.h  handler.c  handler.h  main.c  setting.c  setting.h  setting.json  util.c  util.h
src/camera/: camera.c  camera.h
src/cstring/: cstring.c  cstring.h
src/logger/: logger.c  logger.h
src/serial/: serial.c  serial.h
src/server/: connection.c  connection.h  const.c  const.h  server.c  server.h
src/voice/: voice.c  voice.h
src/zigbee/: zigbee.c  zigbee.h
